<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <ImageView 
        android:id="@+id/head"
        android:layout_width="120dp"
        android:layout_height="100dp"
        android:layout_marginTop="5dp"
        android:src="@drawable/logotemp"
        android:layout_gravity="center"/>
    <TableLayout 
            android:id="@+id/registerInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="1"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp">
            <TableRow>
                <TextView 
                    android:text="@string/name"
                    android:textColor="#000000"
                    android:textStyle="bold"
                    android:gravity="center_horizontal"
                    android:padding="5dp"/>   
                <EditText 
                    android:id="@+id/registername"
                    android:scrollHorizontally="true"
                    android:inputType="text"/>
            </TableRow>
            <TableRow>
                 <TextView 
                    android:text="@string/password"
                    android:textColor="#000000"
                    android:textStyle="bold"
                    android:gravity="center_horizontal"
                    android:padding="5dp"/>
                <EditText 
                    android:id="@+id/registerpassword"
                    android:scrollHorizontally="true"
                    android:inputType="textPassword"/>
            </TableRow>
            <TableRow>
                <TextView 
                    android:text="@string/sex"
                    android:textColor="#000000"
                    android:textStyle="bold"
                    android:gravity="center_horizontal"
                    android:padding="5dp"/>
                <RadioGroup 
                    android:id="@+id/rg1"
                    android:orientation="horizontal">
                    <RadioButton 
                        android:id="@+id/mail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mail"
                        android:checked="true"/>
                    <RadioButton 
                        android:id="@+id/femail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/femail"
                        android:layout_marginLeft="20dp"/>
                </RadioGroup>
            </TableRow>
            <TableRow>
                <TextView 
                    android:text="@string/phone"
                    android:textColor="#000000"
                    android:textStyle="bold"
                    android:gravity="center_horizontal"
                    android:padding="5dp"
                    />
                <EditText 
                    android:id="@+id/registerphone"
                    android:scrollHorizontally="true"
                    android:inputType="phone"
                    />
            </TableRow>
            <TableRow>
                <TextView 
                    android:text="@string/qq"
                    android:textColor="#000000"
                    android:textStyle="bold"
                    android:gravity="center_horizontal"
                    android:padding="5dp"
                    />
                <EditText 
                    android:id="@+id/registerqq"
                    android:scrollHorizontally="true"
                    android:inputType="number"
                    />
            </TableRow>
        </TableLayout>
	    <Button 
            android:id="@+id/ok"
	        android:layout_width="fill_parent"
	        android:layout_height="40dp"
	        android:layout_marginLeft="15dp"
	        android:layout_marginRight="15dp"
	        android:layout_marginTop="15dp"
	        android:background="@drawable/button"
	        android:text="@string/ok" />
	    <Button 
            android:id="@+id/cancel"
	        android:layout_width="fill_parent"
	        android:layout_height="40dp"
	        android:layout_marginLeft="15dp"
	        android:layout_marginRight="15dp"
	        android:layout_marginTop="15dp"
	        android:background="@drawable/button"
	        android:text="@string/cancel" />
    </LinearLayout>